# mpvcmd

./: 0Temp.c  0temp.c  install.sh  main.c  main.cpp  meson.build  meson.options  mpvcmd.pro
doc/: Named Pipe Client.html
test/: execute.py
